# Algorithm-for-AVR-systems

./: .gitignore  README.md  README_ru.md  Settings.md  pyproject.toml
firmwares/: apps.py
system_avr/: manage.py
system_avr/Import/: clients.csv
system_avr/Import/json/: Client-2024-01-25.json  Subjects-2024-01-25.json  Subjects-2024-01-30.json
system_avr/firmwares/: admin.py  apps.py  context_processors.py  forms.py  mixins.py  models.py  signals.py  tasks.py  urls.py  views.py
system_avr/firmwares/migrations/: 0001_initial.py  0002_alter_smartrelay_name.py  0002_remove_client_level_remove_client_lft_and_more.py  0002_rename_subjects_client_parent.py  0003_alter_client_parent_remove_product_subject_and_more.py  0003_alter_smartrelay_slug.py  0003_alter_subjects_client.py  0004_alter_client_slug_alter_product_slug.py  0004_remove_product_availability_client_archive_and_more.py  0005_alter_subjects_client.py  0005_product_availability.py  0006_alter_product_archive.py  0007_alter_product_relay.py  0008_alter_product_images.py  0009_rename_image_productimage_remove_product_images_and_more.py  0010_alter_productimage_product.py  0011_alter_product_date_check_alter_product_date_ready_and_more.py  0012_subjects_description_alter_product_descriiption_and_more.py  0013_client_description.py  0016_productfile.py  (+11 more)
system_avr/instructions/: models.py
system_avr/system_avr/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
system_avr/users/: admin.py  forms.py  models.py  urls.py  views.py
system_avr/utils/: check_form_csv.py  config.py  import_csv.py  slugify.py
(+38 files in other folders)
